--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -695,9 +695,11 @@ a {
 }
 @media (max-width: 991px) {
   .cid-s48MCQYojq .mbr-section-title,
-  .cid-s48MCQYojq .mbr-section-btn,
-  .cid-s48MCQYojq .mbr-text {
+  .cid-s48MCQYojq .mbr-section-btn {
     text-align: center;
+  }
+  .cid-s48MCQYojq .mbr-text {
+    text-align: left;
   }
 }
 .cid-s48OLK6784 {
