--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2458,3 +2458,8 @@ a {
   width: 100%;
   object-fit: cover;
 }
+.cid-taMcdx6vWi .mbr-text,
+.cid-taMcdx6vWi .cost,
+.cid-taMcdx6vWi .mbr-section-btn {
+  color: #000000;
+}
