--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2040,6 +2040,9 @@ a {
     padding: 2rem;
   }
 }
+.cid-tazDNAdSJS .mbr-description {
+  text-align: left;
+}
 .cid-taAAboMHLH {
   padding-top: 0rem;
   padding-bottom: 0rem;
@@ -2442,6 +2445,7 @@ a {
 .cid-torNGL7qJq .card-box .mbr-text,
 .cid-torNGL7qJq .mbr-section-btn {
   color: #000000;
+  text-align: left;
 }
 .cid-taMcdx6vWi {
   padding-top: 0rem;
