--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2357,6 +2357,9 @@ a {
     padding: 2rem;
   }
 }
+.cid-taFVLCopND .mbr-description {
+  text-align: left;
+}
 .cid-taM8Ac0R6c {
   padding-top: 0rem;
   padding-bottom: 0rem;
